refactor: refactored project structure and split the external auth to its own module (extension)